<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_by_categories"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraint"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="25dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text">

      <LinearLayout
          android:id="@+id/constraintLayout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          app:layout_constraintStart_toStartOf="parent"
          tools:ignore="MissingConstraints">

          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/kitchen" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/home_and_kitchen"
              android:textSize="16sp"
              app:layout_constraintTop_toBottomOf="@+id/image" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/constraintLayout2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          app:layout_constraintEnd_toEndOf="parent"
          tools:ignore="MissingConstraints">

          <ImageView
              android:id="@+id/image"
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/nail" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/beauty_and_personal_care"
              android:textSize="16sp"
              app:layout_constraintTop_toBottomOf="@+id/image" />
      </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/pet_food" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_supplies"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/image" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/puzzle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toys_and_games"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/image" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>